--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "es2020",
     "module": "commonjs",
     "moduleResolution": "node",
+    "emitBOM": true,
+    "charset": "utf8",
     "declaration": true,
     "lib": [
       "dom",
